k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: agoraplatform/api:$COMMIT_SHA1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
