k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Tell Kubernetes to make an Ingress controller based on the Nginx project
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Configure how our copy of Nginx behaves
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Removes '/api' from request
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Configure allowable body size
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
# Define our nginx routing
spec:
  tls:
    - hosts:
        - agora.voto
        - www.agora.voto
        - dev.agora.voto
      secretName: agora-tls
  rules:
    - host: agora.voto
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /graphql/?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 8080
    - host: www.agora.voto
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /graphql/?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 8080
